# facto-rs

./: Cargo.toml  LICENSE  README.md
benches/macro/: bench_logger.rs  bench_random.rs  bench_rug.rs  bench_u128.rs  compare.rs  mod.rs  util.rs
benches/micro/: mod.rs
notes/: residue.ipynb
src/: lib.rs  optimized_factoring.rs  util.rs
src/factoring/: brent_cycle.rs  mod.rs  pollard_rho.rs  quadratic_sieve.rs  trial_division.rs
src/factoring/quadratic_sieve/: bitvector.rs  mod.rs  residue.rs
src/optimized_factoring/: certificate.rs  event.rs  mod.rs
src/primality/: bpsw.rs  lucas_primality.rs  lucas_pseudoprime.rs  miller_rabin.rs  mod.rs
tests/: complete_factor.rs
